close session upon retrieving statement